--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -53,7 +53,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../v1.5.3/Project Kaiju Keeper.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
