--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../v1.6.2/index.html"
+export_path="../v1.6.3/new/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -97,7 +97,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../v1.5.2/index.exe"
+export_path="../v1.6.3.2/index.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
