--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../v1.6.3/new/index.html"
+export_path="../v1.7.3.1/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -25,22 +25,22 @@ custom_template/release=""
 variant/extensions_support=false
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
+vram_texture_compression/for_mobile=true
 html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
 progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/icon_144x144="uid://cv3i2vcx1bg45"
+progressive_web_app/icon_180x180="uid://cv3i2vcx1bg45"
+progressive_web_app/icon_512x512="uid://cv3i2vcx1bg45"
+progressive_web_app/background_color=Color(0.227451, 0.247059, 0, 1)
 
 [preset.1]
 
@@ -90,7 +90,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 advanced_options=false
 dedicated_server=false
 custom_features=""
